6928566	Header violates RFC 2822 for multiple calls of addRecipient(s)
6995537	work around this JDK bug that causes iso-2022-jp decoding problems
G 11069	update the mail.jar manifest to include DynamicImport-Package
K  3442	make sure socket is closed if SMTP connect fails
K  3539	Multiparts do not parse correctly in presence of legacy Mac line endings
<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
<no id>	properly disable TOP if POP3 CAPA response doesn't include it
<no id>	add mail.pop3.disablecapa property to disable use of the CAPA command
<no id>	fix support for Properties objects with default Properties objects
<no id>	integrate NTLM support, no longer needs jcifs.jar
<no id>	add mail.pop3.cachewriteto property, default false
<no id>	add mail.pop3.filecache.enable property for caching messages in tmp file
<no id>	add mail.mime.ignorewhitespacelines property, default false
<no id>	add support for IMAP UNSELECT command
<no id>	add mail.mime.contentypehandler System property, to clean Content-Type
<no id>	add mail.mime.allowencodedmessages System property
<no id>	add support for SASL authentication to SMTP provider
<no id>	add SMTPSenderFailedException to indicate problems with sender address
<no id>	ignore encoding for composite content when writing message
<no id>	cache POP3 content using java.lang.ref.SoftReference,
	set mail.pop3.keepmessagecontent to true to disable
<no id>	add POP3 PIPELINING support
<no id>	reduce POP3 memory usage, especially if server supports pipelining
<no id>	add support for IMAP SORT extension (RFC 5256) to IMAPFolder
<no id>	add demo classes to support non-MIME messages from Outlook
<no id>	fix deadlock when using IMAP fetch and IDLE
<no id>	add support for mail.smtp.auth.<mechanism>.disable properties


		  CHANGES IN THE 1.4.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.3 release.

6829124	IMAPFolder deadlock using IMAP IDLE